--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -95,10 +95,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Include\glad.c" />
+    <ClCompile Include="src\include\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Include\Application.h" />
+    <ClInclude Include="src\include\Application.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
