--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -95,11 +95,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\GLCall.cpp" />
     <ClCompile Include="src\include\glad.c" />
+    <ClCompile Include="src\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Application.h" />
     <ClInclude Include="src\include\GLCall.h" />
+    <ClInclude Include="src\include\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Fragment2.Fshader" />
