--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -96,6 +96,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\GLCall.cpp" />
     <ClCompile Include="src\include\glad.c" />
     <ClCompile Include="src\Shader.cpp" />
@@ -119,7 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Application.h" />
+    <ClInclude Include="src\include\Camera.h" />
     <ClInclude Include="src\include\GLCall.h" />
+    <ClInclude Include="src\include\Global.h" />
     <ClInclude Include="src\include\Shader.h" />
     <ClInclude Include="src\test\TestCamera.h" />
     <ClInclude Include="src\test\TestCoordinate.h" />
