--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\test\TestCamera.cpp" />
     <ClCompile Include="src\test\TestCoordinate.cpp" />
+    <ClCompile Include="src\test\TestLightColor.cpp" />
     <ClCompile Include="src\test\TestMatrix.cpp" />
     <ClCompile Include="src\test\TestShaderPart.cpp" />
     <ClCompile Include="src\test\Test.cpp" />
@@ -126,6 +127,7 @@
     <ClInclude Include="src\include\Shader.h" />
     <ClInclude Include="src\test\TestCamera.h" />
     <ClInclude Include="src\test\TestCoordinate.h" />
+    <ClInclude Include="src\test\TestLightColor.h" />
     <ClInclude Include="src\test\TestMatrix.h" />
     <ClInclude Include="src\test\TestShaderPart.h" />
     <ClInclude Include="src\test\Test.h" />
