--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="src\test\TestCamera.cpp" />
     <ClCompile Include="src\test\TestCoordinate.cpp" />
     <ClCompile Include="src\test\TestLightColor.cpp" />
+    <ClCompile Include="src\test\TestMaterialLight.cpp" />
     <ClCompile Include="src\test\TestMatrix.cpp" />
     <ClCompile Include="src\test\TestShaderPart.cpp" />
     <ClCompile Include="src\test\Test.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="src\test\TestCamera.h" />
     <ClInclude Include="src\test\TestCoordinate.h" />
     <ClInclude Include="src\test\TestLightColor.h" />
+    <ClInclude Include="src\test\TestMaterialLight.h" />
     <ClInclude Include="src\test\TestMatrix.h" />
     <ClInclude Include="src\test\TestShaderPart.h" />
     <ClInclude Include="src\test\Test.h" />
