--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\TestMaterialLight.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1011,6 +1014,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\include\OtherCamera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\TestMaterialLight.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
