--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="src\test\TestBaseLight.cpp" />
     <ClCompile Include="src\test\TestCamera.cpp" />
     <ClCompile Include="src\test\TestCoordinate.cpp" />
+    <ClCompile Include="src\test\TestDiffuseMap.cpp" />
     <ClCompile Include="src\test\TestLightColor.cpp" />
     <ClCompile Include="src\test\TestMaterialLight.cpp" />
     <ClCompile Include="src\test\TestMatrix.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="src\test\TestBaseLight.h" />
     <ClInclude Include="src\test\TestCamera.h" />
     <ClInclude Include="src\test\TestCoordinate.h" />
+    <ClInclude Include="src\test\TestDiffuseMap.h" />
     <ClInclude Include="src\test\TestLightColor.h" />
     <ClInclude Include="src\test\TestMaterialLight.h" />
     <ClInclude Include="src\test\TestMatrix.h" />
