Framebuffers - base apply

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="src\test\TestDepthTesting.cpp" />
     <ClCompile Include="src\test\TestDiffuseMap.cpp" />
     <ClCompile Include="src\test\TestFaceCulling.cpp" />
+    <ClCompile Include="src\test\TestFramebuffers.cpp" />
     <ClCompile Include="src\test\TestLightCasters.cpp" />
     <ClCompile Include="src\test\TestLightColor.cpp" />
     <ClCompile Include="src\test\TestMaterialLight.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="src\test\TestDepthTesting.h" />
     <ClInclude Include="src\test\TestDiffuseMap.h" />
     <ClInclude Include="src\test\TestFaceCulling.h" />
+    <ClInclude Include="src\test\TestFramebuffers.h" />
     <ClInclude Include="src\test\TestLightCasters.h" />
     <ClInclude Include="src\test\TestLightColor.h" />
     <ClInclude Include="src\test\TestMaterialLight.h" />
