--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -95,7 +95,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\GLCall.cpp" />
     <ClCompile Include="src\include\glad.c" />
@@ -123,6 +122,7 @@
     <ClCompile Include="src\test\TestStandDraw.cpp" />
     <ClCompile Include="src\test\TestStencilTesting.cpp" />
     <ClCompile Include="src\test\TestTexture.cpp" />
+    <ClCompile Include="src\Tutorial\Main.cpp" />
     <ClCompile Include="src\vendor\glm\detail\glm.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_demo.cpp" />
@@ -163,6 +163,8 @@
     <ClInclude Include="src\test\TestStandDraw.h" />
     <ClInclude Include="src\test\TestStencilTesting.h" />
     <ClInclude Include="src\test\TestTexture.h" />
+    <ClInclude Include="src\Tutorial\camera.h" />
+    <ClInclude Include="src\Tutorial\shader.h" />
     <ClInclude Include="src\vendor\glm\common.hpp" />
     <ClInclude Include="src\vendor\glm\detail\compute_common.hpp" />
     <ClInclude Include="src\vendor\glm\detail\compute_vector_relational.hpp" />
