--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -95,6 +95,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\GLCall.cpp" />
     <ClCompile Include="src\include\glad.c" />
@@ -122,7 +123,6 @@
     <ClCompile Include="src\test\TestStandDraw.cpp" />
     <ClCompile Include="src\test\TestStencilTesting.cpp" />
     <ClCompile Include="src\test\TestTexture.cpp" />
-    <ClCompile Include="src\Tutorial\Main.cpp" />
     <ClCompile Include="src\vendor\glm\detail\glm.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_demo.cpp" />
