--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\TestAdvancedData.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1095,6 +1098,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\Tutorial\shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\TestAdvancedData.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
