--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\test\TestAdvancedData.cpp" />
     <ClCompile Include="src\test\TestBaseLight.cpp" />
     <ClCompile Include="src\test\TestBlending.cpp" />
     <ClCompile Include="src\test\TestCamera.cpp" />
@@ -142,6 +143,7 @@
     <ClInclude Include="src\include\Model.h" />
     <ClInclude Include="src\include\OtherCamera.h" />
     <ClInclude Include="src\include\Shader.h" />
+    <ClInclude Include="src\test\TestAdvancedData.h" />
     <ClInclude Include="src\test\TestBaseLight.h" />
     <ClInclude Include="src\test\TestBlending.h" />
     <ClInclude Include="src\test\TestCamera.h" />
