--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="src\test\TestFaceCulling.cpp" />
     <ClCompile Include="src\test\TestFramebuffers.cpp" />
     <ClCompile Include="src\test\TestGeometryShader.cpp" />
+    <ClCompile Include="src\test\TestInstancing.cpp" />
     <ClCompile Include="src\test\TestLightCasters.cpp" />
     <ClCompile Include="src\test\TestLightColor.cpp" />
     <ClCompile Include="src\test\TestMaterialLight.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="src\test\TestFaceCulling.h" />
     <ClInclude Include="src\test\TestFramebuffers.h" />
     <ClInclude Include="src\test\TestGeometryShader.h" />
+    <ClInclude Include="src\test\TestInstancing.h" />
     <ClInclude Include="src\test\TestLightCasters.h" />
     <ClInclude Include="src\test\TestLightColor.h" />
     <ClInclude Include="src\test\TestMaterialLight.h" />
