--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="src\test\TestMatrix.cpp" />
     <ClCompile Include="src\test\TestModel.cpp" />
     <ClCompile Include="src\test\TestMultipleLights.cpp" />
+    <ClCompile Include="src\test\TestPlanetInstancing.cpp" />
     <ClCompile Include="src\test\TestShaderPart.cpp" />
     <ClCompile Include="src\test\Test.cpp" />
     <ClCompile Include="src\test\TestClearColor.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="src\test\TestMatrix.h" />
     <ClInclude Include="src\test\TestModel.h" />
     <ClInclude Include="src\test\TestMultipleLights.h" />
+    <ClInclude Include="src\test\TestPlanetInstancing.h" />
     <ClInclude Include="src\test\TestShaderPart.h" />
     <ClInclude Include="src\test\Test.h" />
     <ClInclude Include="src\test\TestClearColor.h" />
