--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="src\test\TestShaderPart.cpp" />
     <ClCompile Include="src\test\Test.cpp" />
     <ClCompile Include="src\test\TestClearColor.cpp" />
+    <ClCompile Include="src\test\TestShadowMapping.cpp" />
     <ClCompile Include="src\test\TestStandDraw.cpp" />
     <ClCompile Include="src\test\TestStencilTesting.cpp" />
     <ClCompile Include="src\test\TestTexture.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="src\test\TestShaderPart.h" />
     <ClInclude Include="src\test\Test.h" />
     <ClInclude Include="src\test\TestClearColor.h" />
+    <ClInclude Include="src\test\TestShadowMapping.h" />
     <ClInclude Include="src\test\TestStandDraw.h" />
     <ClInclude Include="src\test\TestStencilTesting.h" />
     <ClInclude Include="src\test\TestTexture.h" />
