--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="src\test\TestModel.cpp" />
     <ClCompile Include="src\test\TestMultipleLights.cpp" />
     <ClCompile Include="src\test\TestNormalMapping.cpp" />
+    <ClCompile Include="src\test\TestParallaxMapping.cpp" />
     <ClCompile Include="src\test\TestPlanetInstancing.cpp" />
     <ClCompile Include="src\test\TestPointShadows.cpp" />
     <ClCompile Include="src\test\TestShaderPart.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="src\test\TestModel.h" />
     <ClInclude Include="src\test\TestMultipleLights.h" />
     <ClInclude Include="src\test\TestNormalMapping.h" />
+    <ClInclude Include="src\test\TestParallaxMapping.h" />
     <ClInclude Include="src\test\TestPlanetInstancing.h" />
     <ClInclude Include="src\test\TestPointShadows.h" />
     <ClInclude Include="src\test\TestShaderPart.h" />
