--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="src\test\TestFramebuffers.cpp" />
     <ClCompile Include="src\test\TestGammaCorrection.cpp" />
     <ClCompile Include="src\test\TestGeometryShader.cpp" />
+    <ClCompile Include="src\test\TestHDR.cpp" />
     <ClCompile Include="src\test\TestInstancing.cpp" />
     <ClCompile Include="src\test\TestLightCasters.cpp" />
     <ClCompile Include="src\test\TestLightColor.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="src\test\TestFramebuffers.h" />
     <ClInclude Include="src\test\TestGammaCorrection.h" />
     <ClInclude Include="src\test\TestGeometryShader.h" />
+    <ClInclude Include="src\test\TestHDR.h" />
     <ClInclude Include="src\test\TestInstancing.h" />
     <ClInclude Include="src\test\TestLightCasters.h" />
     <ClInclude Include="src\test\TestLightColor.h" />
