--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\test\PBRPipleline\PBRLighting\TestPBRLighting.cpp" />
     <ClCompile Include="src\test\TestAdvancedData.cpp" />
     <ClCompile Include="src\test\TestAdvancedGLSL.cpp" />
     <ClCompile Include="src\test\TestAdvancedLighting.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="src\include\Model.h" />
     <ClInclude Include="src\include\OtherCamera.h" />
     <ClInclude Include="src\include\Shader.h" />
+    <ClInclude Include="src\test\PBRPipleline\PBRLighting\TesPBRLighting.h" />
     <ClInclude Include="src\test\TestAdvancedData.h" />
     <ClInclude Include="src\test\TestAdvancedGLSL.h" />
     <ClInclude Include="src\test\TestAdvancedLighting.h" />
