--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="src\test\TestSSAO.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\test\PBRPipleline\PBRLighting\TestPBRLighting.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\GLCall.h">
@@ -1191,6 +1194,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\test\TestSSAO.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\test\PBRPipleline\PBRLighting\TesPBRLighting.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
